update spec transaction
